# wxWidgets-consoleapp-template

./: CMakeLists.txt  README.md
include/: appmain.h  wxbasedef.h
src/: appmain.cpp
